Efmub-Ogy/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Corporate_Sales_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DeltaCC- US4 - Req-556</description>
        <label>Corporate Sales Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOT_Department_Information__c</fullName>
        <description>DeltaCC- US2 - Req-558</description>
        <label>DOT Department Information</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FASsmBase__c</fullName>
        <externalId>true</externalId>
        <label>FASsmBase</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Flight_Crew_from_Apex__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if the flight crew is inserted from apex.</description>
        <label>Flight Crew from Apex</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Household_SkyMiles__c</fullName>
        <description>DeltaCC- US10, 12 - Req-521</description>
        <label>Household SkyMiles</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsPlaceholder__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Account was used for migration of Contacts, Agent needs to create new Account for Contacts on this Account.</inlineHelpText>
        <label>Migrated Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_SoundEx__c</fullName>
        <label>Name SoundEx</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Profession__c</fullName>
        <description>The customer&apos;s profession</description>
        <inlineHelpText>Select the profession or occupation of the customer, if known</inlineHelpText>
        <label>Profession</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Attorney</fullName>
                </value>
                <value>
                    <fullName>Doctor</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Nurse</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Travel Agent</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Top_XX_Corporate_Sales_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DeltaCC- US4 - Req-557</description>
        <label>Top XX Corporate Sales Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Travel_Agency_Information__c</fullName>
        <description>DeltaCC- US2 - Req-559</description>
        <label>Travel Agency Information</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Email</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Any_Alert_Picture__pc</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>PC_EMAIL</columns>
        <columns>PC_ADDRESS2_CITY</columns>
        <columns>PC_ADDRESS2_STATE</columns>
        <columns>SkyMiles_Status__pc</columns>
        <columns>SkyMiles_Number__pc</columns>
        <columns>Flying_Blue_Status__pc</columns>
        <columns>Flying_Blue_Number__pc</columns>
        <filterScope>Everything</filterScope>
        <label>All Customers</label>
    </listViews>
    <recordTypes>
        <fullName>Account</fullName>
        <active>true</active>
        <label>Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Entity</fullName>
        <active>true</active>
        <label>Entity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Household</fullName>
        <active>true</active>
        <label>Household</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Customer_Channel_Required</fullName>
        <active>true</active>
        <description>Either a Phone number, email address or mailing address is required</description>
        <errorConditionFormula>AND( 
OR( 
ISBLANK( PersonMailingStreet ), 
ISBLANK( PersonMailingCity ), 
ISBLANK( PersonMailingState ), 
ISBLANK( PersonMailingPostalCode ),
ISBLANK( PersonMailingCountry )

), 
ISBLANK( PersonEmail ), 
ISBLANK( Phone ),
NOT(Flight_Crew_from_Apex__c) 
)</errorConditionFormula>
        <errorMessage>Either a Phone number, email address or a complete mailing address is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>First_Name_Required</fullName>
        <active>true</active>
        <description>First Name is required when creating a new Person Account</description>
        <errorConditionFormula>ISBLANK( FirstName )</errorConditionFormula>
        <errorMessage>First Name is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FlyingBlue_Number_Length_Validation</fullName>
        <active>true</active>
        <description>Allows only 10 characters</description>
        <errorConditionFormula>not( LEN( Flying_Blue_Number__pc ) = 10) &amp;&amp; Flying_Blue_Number__pc !=&apos;&apos;</errorConditionFormula>
        <errorDisplayField>Flying_Blue_Number__pc</errorDisplayField>
        <errorMessage>FlyingBlue# should be 10 digits</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invalid_email_address</fullName>
        <active>false</active>
        <description>Validation rule to check if the agent submitted the valid format of email address</description>
        <errorConditionFormula>IF( AND( NOT(REGEX( PersonEmail,&apos;([a-zA-Z0-9_\\-\\.]+)@((\\[a-z]{1,3}\\.[a-z]{1,3}\\.[a-z]{1,3}\\.)|(([a-zA-Z0-9\\-]+\\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})&apos;)), NOT(REGEX( Work_Email__pc ,&apos;([a-zA-Z0-9_\\-\\.]+)@((\\[a-z]{1,3}\\.[a-z]{1,3}\\.[a-z]{1,3}\\.)|(([a-zA-Z0-9\\-]+\\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})&apos;)), NOT(REGEX( Other_Email__pc ,&apos;([a-zA-Z0-9_\\-\\.]+)@((\\[a-z]{1,3}\\.[a-z]{1,3}\\.[a-z]{1,3}\\.)|(([a-zA-Z0-9\\-]+\\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})&apos;)) ), true, false )</errorConditionFormula>
        <errorMessage>Invalid Email address</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone_Should_be_Numeric</fullName>
        <active>false</active>
        <description>To verify that the phone number field is not a free form field</description>
        <errorConditionFormula>OR(!REGEX(PersonMobilePhone, &quot;\\+{0,1}\\({0,1}[0-9]*\\){0,1}\\s{0,1}[0-9]*-{0,1}[0-9]*&quot;),
!REGEX(PersonOtherPhone, &quot;\\+{0,1}\\({0,1}[0-9]*\\){0,1}\\s{0,1}[0-9]*-{0,1}[0-9]*&quot;),
!REGEX(Phone, &quot;\\+{0,1}\\({0,1}[0-9]*\\){0,1}\\s{0,1}[0-9]*-{0,1}[0-9]*&quot;))</errorConditionFormula>
        <errorMessage>Phone number cannot be alphanumeric</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Skymiles_Number_Length_Validation</fullName>
        <active>true</active>
        <description>Allows only 10 characters</description>
        <errorConditionFormula>not( LEN(SkyMiles_Number__pc) = 10) &amp;&amp; SkyMiles_Number__pc !=&apos;&apos;</errorConditionFormula>
        <errorDisplayField>SkyMiles_Number__pc</errorDisplayField>
        <errorMessage>Skymiles# should be 10 digits</errorMessage>
    </validationRules>
</CustomObject>